--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/swagger": "^4.8.0",
     "dotenv": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.5.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -39,6 +40,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^14.14.36",
     "@types/nodemailer": "^6.4.1",
     "@types/supertest": "^2.0.10",
